[gd_scene load_steps=3 format=3 uid="uid://ci7ab7f5g7r66"]

[ext_resource type="Script" uid="uid://bwdikqb3n88nt" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://detfb46pcxfmt" path="res://sprites/button.png" id="1_yqeox"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 649.0
color = Color(0.121569, 0.101961, 0.180392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 60.0001
offset_top = 2.0
offset_right = 101.0
offset_bottom = 67.0
scale = Vector2(10, 10)
alignment = 1

[node name="Play Button" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_yqeox")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Play Button"]
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 113.0
offset_bottom = 25.0
scale = Vector2(0.31, 0.31)
mouse_filter = 2
text = "PLAY"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit Button" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_yqeox")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Exit Button"]
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 113.0
offset_bottom = 25.0
scale = Vector2(0.31, 0.31)
mouse_filter = 2
text = "EXIT"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="VBoxContainer/Play Button" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Play Button" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit Button" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Exit Button" to="." method="_on_exit_button_mouse_exited"]
